--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -1,13 +1,11 @@
 ---
-layout: archive
 title: "Projects"
 permalink: /projects/
-author_profile: true
 ---
 
-{% include base_path %}
+# Projects
 
-
-{% for post in site.projects %}
-  {% include archive-single.html %}
+{% for project in site.projects %}
+- **[{{ project.title }}]({{ project.url }})**  
+  {{ project.description }}
 {% endfor %}
