--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -2,6 +2,7 @@
 title: "Projects"
 permalink: /projects/
 layout: default  # or use your site’s page layout
+author_profile: true
 ---
 
 # Projects
