--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -8,6 +8,6 @@ author_profile: true
 # Projects
 
 {% for project in site.projects %}
-- **[{{ project.title }}]({{ project.url }})**  
+    [{{ project.title }}]({{ project.url }})
   {{ project.description }}
 {% endfor %}
