--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -8,5 +8,5 @@ author_profile: true
 
 {% for project in site.projects %}
     [{{ project.title }}]({{ project.url }})
-  {{ project.description }}
+ <br> {{ project.description }} </br>
 {% endfor %}
