--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -4,10 +4,7 @@ title: "Projects"
 permalink: /projects/
 author_profile: true
 ---
-
 {% include base_path %}
-
-
-{% for post in site.projects %}
+{% for item in site.projects %}
   {% include archive-single.html %}
 {% endfor %}
