--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -7,14 +7,14 @@ author_profile: true
 
 {% include base_path %}
 
-## Ongoing Projects
+<h2> Ongoing Projects </h2>
 {% for post in site.projects %}
   {% if post.status == "ongoing" %}
     {% include archive-single.html %}
   {% endif %}
 {% endfor %}
 
-## Completed Projects
+<h2>Completed Projects</h2>
 {% for post in site.projects %}
   {% if post.status == "completed" %}
     {% include archive-single.html %}
