--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -1,10 +1,10 @@
 ---
 layout: archive
-permalink: /year-archive/
 title: "Posts"
+permalink: /posts/
 author_profile: true
-
 ---
+
 
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
